# rest-crypto-converter

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .redis.conf.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: general-ci.yml
src/: api.py  config.py  di.py  main.py  schemas.py
src/adapters/exchange/: base.py  binance.py  kucoin.py
src/services/: exchange.py
src/tests/: mock.py  test_conversion.py
