[tool.poetry]
name = "REST Crypto Converter"
version = "0.1.0"
description = ""
authors = ["pavel.pl <reinkopfen@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"
pydantic-settings = "^2.1.0"
pydantic = "^2.11.3"
aiohttp = "^3.11.16"
redis = "^5.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pre-commit = "^4.2.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core=1.8.1"]
build-backend = "poetry.core.masonry.api"
